
cmake_minimum_required (VERSION 2.6)
project (LIBFFGLQTSCREENCAPTURE)

# add the corresponding path to include
include(${QT_USE_FILE})

set(LIBFFGLQTSCREENCAPTURE_SRCS FreeFrameQtScreenCapture.cpp )


SET(FREEFRAMEGL_DIR_PLUGINS "${FREEFRAMEGL_PATH}/Source/FFGLPlugins/")
SET(FREEFRAMEGL_DIR_COMMON "${FREEFRAMEGL_PATH}/Source/Common/")

include_directories(${FREEFRAMEGL_DIR_PLUGINS})

set(LIBFFGLQTSCREENCAPTURE_SRCS
    ${LIBFFGLQTSCREENCAPTURE_SRCS}
    ${FREEFRAMEGL_DIR_COMMON}/FFGLShader.cpp
    ${FREEFRAMEGL_DIR_COMMON}/FFGLExtensions.cpp
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginInfo.cpp
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginInfoData.cpp
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGL.cpp
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginManager.cpp
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginSDK.cpp
)

add_library(ffglQtScreenCapture MODULE ${LIBFFGLQTSCREENCAPTURE_SRCS} )

target_link_libraries(ffglQtScreenCapture ${OPENGL_LIBRARY} ${QT_LIBRARIES} ${GLEW_LIBRARY} )

